# TrixC

./: compile_commands.json  fixup.sh  flake.nix  meson.build  meson_options.txt  shell.nix
.cache/clangd/index/: anim.c.00DE4FD6DC006B41.idx  bar.c.2860F88D02B610C0.idx  bar_worker.c.DC264E2A263FBC95.idx  config.c.17CB60C8C55C6E83.idx  deco.c.684573CAAA6B9734.idx  files_panel.c.7472109EE7BDE603.idx  files_panel.h.F7FECF258A634D1F.idx  gesture.c.454E6D202D9BB3C8.idx  gesture.h.F94EF0663B63A07B.idx  ipc.c.CBFFAD8227D1978A.idx  layout.c.36E567C17C79CD9F.idx  lsp_panel.c.E02AAFD38982ED0E.idx  lsp_panel.h.77DC9633B619CFBE.idx  lua.c.537FA9BE4937A57E.idx  main.c.C0BEF591890C63CF.idx  marvin_lua.h.17EE28FBD925C3EB.idx  marvin_panel.c.F13D4684F08A1E4F.idx  marvin_panel.h.7E3ED802B82417B2.idx  nvim_panel.c.AFDFECCC55850B57.idx  nvim_panel.h.018F08B1E56BA9D9.idx  overlay.c.CDB89C659F148815.idx  overlay_exports.c.546593F10FBAADD1.idx  overlay_internal.h.BD68841257EC159C.idx  run_panel.c.B7546784431C81BB.idx  run_panel.h.2DA3BB4D8311202F.idx  screenshot.c.91EF789D45876067.idx  screenshot.h.5620993CB74808F6.idx  shader.c.5F37EF0F57EAE51A.idx  shader.h.BF35FE5099BA1540.idx  tls.c.50B77F9714E9F00F.idx  trixie.h.EE2D8A5CF071AB7A.idx  trixiectl.c.CA73F026FE3BEFB0.idx  twm.c.8796FEDF385A2616.idx
data/: Trixie.desktop
docs/: AGENTIC.md
examples/: trixie.conf
include/: files_panel.h  gesture.h  lsp_panel.h  marvin_panel.h  nvim_panel.h  overlay_internal.h  run_panel.h  screenshot.h  shader.h  shadow.h  trixie.h
man/: trixie.1  trixie.5  trixiectl.1
nix/: hm-module.nix  nixos-module.nix  package.nix
src/: README.md  anim.c  bar.c  bar_worker.c  config.c  deco.c  files_panel.c  gesture.c  ipc.c  layout.c  lsp_panel.c  lua.c  lua_reload_bindings.c  main.c  marvin_panel.c  meson.build  nvim_panel.c  overlay.c  overlay_exports.c  reload.c  run_panel.c  screenshot.c  shader.c  shadow.c  trixie.conf.example  trixie.h  trixiectl.c  twm.c
src/.cache/clangd/index/: anim.c.00DE4FD6DC006B41.idx  bar.c.2860F88D02B610C0.idx  config.c.17CB60C8C55C6E83.idx  deco.c.684573CAAA6B9734.idx  ipc.c.CBFFAD8227D1978A.idx  layout.c.36E567C17C79CD9F.idx  main.c.C0BEF591890C63CF.idx  trixie.h.3ABE32C497441AF3.idx  trixiectl.c.CA73F026FE3BEFB0.idx  twm.c.8796FEDF385A2616.idx
src/lsp/: tls.c
tree-sitter-trixie/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-trixie/bindings/c/: tree-sitter-trixlang.pc.in
tree-sitter-trixie/bindings/go/: binding.go  binding_test.go
tree-sitter-trixie/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-trixie/bindings/python/tests/: test_binding.py
tree-sitter-trixie/bindings/python/tree_sitter_trixlang/: __init__.py  binding.c
tree-sitter-trixie/bindings/rust/: build.rs  lib.rs
tree-sitter-trixie/bindings/swift/TreeSitterTrixlang/: trixlang.h
tree-sitter-trixie/bindings/swift/TreeSitterTrixlangTests/: TreeSitterTrixlangTests.swift
tree-sitter-trixie/src/: grammar.json  node-types.json  parser.c
