[package]
name = "tree-sitter-trixlang"
description = "parser and syntax highlighting for Trixie's config files"
version = "0.1.0"
authors = ["Jless <jns.corey@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "trixlang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jlesster/trixc.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
